[github] commenting the code-base

--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
                         <div class="w-[100px] relative">
                             <canvas id="myChart1"></canvas>
                             <h2
-                                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-md font-bold">
+                                class="absolute top-[40%] left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-md font-bold">
                                 78%</h2>
                             <p class="text-center">Average</p>
                         </div>
                         <div class="w-[100px] relative">
                             <canvas id="myChart2"></canvas>
                             <h2
-                                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-md font-bold">
+                                class="absolute top-[40%] left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-md font-bold">
                                 95%</h2>
                             <p class="text-center">Top</p>
 
@@ -222,7 +222,7 @@
                         <div class="w-[100px] relative">
                             <canvas id="myChart3"></canvas>
                             <h2
-                                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-md font-bold">
+                                class="absolute top-[40%] left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-md font-bold">
                                 59%</h2>
                             <p class="text-center">Me</p>
                         </div>
